Fixed various security hotspots